[tool.poetry]
name = "deck-printer"
version = "0.1.0"
description = ""
authors = ["Francis de Ladurantaye <f.deladurantaye@heyday.ai>"]
readme = "README.md"
packages = [{include = "deck_printer"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tqdm = "^4.65.0"
pandas = "^2.0.0"
scrython = "^1.11.0"
requests = "^2.28.2"
opencv-python = "^4.7.0.72"
einops = "^0.6.0"
fpdf = "^1.7.2"
pyfzf = "^0.3.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
